// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <div
    class="tile other-class this-is-a-test"
  />
</DocumentFragment>
`;

exports[`Tile component should render 1`] = `
<DocumentFragment>
  <div
    class="tile"
  >
    <img
      alt="placeholder"
      src="http://bulma.io/images/placeholders/128x128.png"
    />
  </div>
</DocumentFragment>
`;

exports[`Tile component should render as Section 1`] = `
<DocumentFragment>
  <section
    class="tile"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Tile component should use inline styles 1`] = `
<DocumentFragment>
  <div
    class="tile"
    style="height: 250px;"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;
